trabalho pw para amanha

--- a/atividade1.html
+++ b/atividade1.html
@@ -38,7 +38,7 @@
                         <a href="#" class="dropdown-item2">AC/DC</a>
                         <a href="#" class="dropdown-item3">David Bowie</a>
                         <a class="dropdown-item4" href="#">Elton John</a>
-                        <a class="dropdown-item5" href="#">Quenn</a>
+                        <a class="dropdown-item5" href="#">Queen</a>
                         <a href="#" class="dropdown-item6">Janis Joplin</a>
                         <a href="#" class="dropdown-item7">The Doors</a>
                     </div>
