--- a/atividade1.html
+++ b/atividade1.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body class="text-center">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <a href="#"><img height="50px" src="img/radiorock.png" alt=""></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
@@ -45,16 +45,59 @@
                 </li>
             </ul>
         </div>
+        <img height="65px" src="img/flaming-rabbit.png" alt="">
     </nav>
+    <br>
     <div class="container-fluid">
         <div class="row">
-            <div class="gallery_product col-12 col-sm-4 col-md-6 mx-auto text-center">
-                <a href="https://revista.cifras.com.br/artigo/ozzy-osbourne-mordeu-um-morcego"><img src="img/ozzy.jpg" class="img-fluid" title="Ozzy Osbourne/" alt=""></a>
-                <h4 class="title">Relembre quando Ozzy Osbourne mordeu um morcego</h4>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 mx-auto">
+
+                <div class="card flex-md-wrap mb-4 shadow-sm h-md-250">
+                    <div class="card-body d-flex flex-wrap align-items-start">
+                        <h4 class="mb-0">
+                            <a class="text-white titulo" href="https://revista.cifras.com.br/artigo/ozzy-osbourne-mordeu-um-morcego">Relembre quando Ozzy Osbourne mordeu um morcego</a>
+                        </h4>
+                    </div>
+                    <a href="https://revista.cifras.com.br/artigo/ozzy-osbourne-mordeu-um-morcego"><img src="img/ozzy2.jpg" class="img-fluid card-img-right flex-auto d-none d-lg-block" alt="Card image cap"></a>
+                </div>
+
             </div>
-            <div class="col-12 col-sm-4 col-md-6 mx-auto text-center"><img src="img/ozzy.jpg" class="img-fluid" alt=""></div>
+            <div class="col-12 col-sm-6 col-md-6 col-lg-6 mx-auto">
+
+                <div class="card flex-md-wrap mb-4 shadow-sm h-md-250">
+                    <div class="card-body d-flex flex-wrap align-items-start">
+
+                        <h4 class="mb-0">
+                            <a class="text-white titulo" href="#">As Performances mais marcantes da história do rock and roll</a>
+                        </h4>
+
+
+                    </div>
+                    <a href="http://www.artescetera.com.br/musica/as-10-performances-mais-marcantes/"><img src="img/hendrix-burn-guitar.jpg" class="img-fluid card-img-right flex-auto d-none d-lg-block" alt="Card image cap"></a>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-4 -col-lg-4 zoom text-white">
+                <a href="https://whiplash.net/materias/melhores/248990-who.html"><img src="img/thewho.jpg" class="img-fluid" alt=""><br>
+                    <p class="text-white legenda">The Who: os álbuns da banda, do pior para o melhor</p><br></a>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 -col-lg-4 zoom">
+                <a href="https://whiplash.net/materias/biografias/258421-johnnycash.html"><img src="img/cash2.jpg" class="img-fluid" alt="">
+                    <p class="text-white legenda">Johnny Cash: 10 músicas de rock que ele regravou</p><br></div>
+            <div class="col-12 col-sm-6 col-md-4 -col-lg-4 zoom">
+                <a href="https://whiplash.net/materias/biografias/280525-doors.html"><img src="img/jim2.jpg" class="img-fluid" alt="">
+                    <p class="text-white legenda">The Doors: O Jim Que Tomava Muito Gim</p><br></a>
+            </div>
         </div>
     </div>
+
+    </div>
+    <footer class="rodape">
+        Todos os direitos reservados.
+    </footer>
 
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/bootstrap.js"></script>
